k8s/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: logguard
  labels:
    app: elasticsearch
    app.kubernetes.io/part-of: logguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      automountServiceAccountToken: false
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: es-storage
              mountPath: /usr/share/elasticsearch/data
          resources:
            requests:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 1Gi
            limits:
              cpu: "1"
              ephemeral-storage: 2Gi
              memory: 1536Mi
          readinessProbe:
            httpGet:
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
      volumes:
        - name: es-storage
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
