k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: logguard
  labels:
    app: postgres
    app.kubernetes.io/part-of: logguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 512Mi
              memory: 256Mi
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - logguard_user
                - -d
                - logguard_db
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - logguard_user
                - -d
                - logguard_db
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
